lib_LIBRARIES=libtogo.a  
libtogo_a_SOURCES= togo_util.c \
				   togo_string.c \
				   togo_log.c \
				   togo_config.c \
				   togo_init.c \
				   togo_server.c \
				   togo_command.c \
				   togo_dispatcher.c \
				   togo_hashtable.c \
				   togo_alloc.c \
				   togo_hash.c \
				   togo_pool.c \
				   togo_array.c \
				   togo_m_queue.c \
				   togo_m_counter.c  \
				   togo_m_lock.c  
include_HEADERS=togo_util.h \
				togo_string.h \
				togo_log.h \
				togo_config.h \
				togo_init.h \
				togo.h \
				togo_server.h \
				togo_command.h \
				togo_dispatcher.h \
				togo_hashtable.h \
				togo_load.h \
				togo_alloc.h \
				togo_hash.h \
				togo_pool.h \
				togo_array.h \
				togo_m_queue.h \
				togo_m_counter.h \
				togo_m_lock.h 